Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Systems Engineer, going into development. I have being a DevOps in my eye sight.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>PC Gaming, Warhammer 40K</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I have always worked in what I dreamed, </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals.</p>
     </section>
 
     <footer id="footer">
