--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a Systems Engineer, going into development. I have being a DevOps in my eye sight.</p>
+      <p>I'm currently, a Senior Systems Engineer, going into development.</p>
       <h1>Where I'm From</h1>
       <p>I am from Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I live in Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals.</p>
+      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals. As well as being a DevOps is currently, in my eye sight</p>
     </section>
 
     <footer id="footer">
