Updating our details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm currently, a Senior Systems Engineer, going into development.</p>
+      <p>I’m currently, a senior Systems Engineer, going into DevOps. I have always found all IT related fascinating and I always wanted to, one day, be a “game maker”. 
+The time spent at the Arcades, spending my 20 cents, leftovers from buying milk, only increased the passion that I have and that it has only grown throughout the years. After 15 years in IT, working on Systems, I have the need t move on to the DevOps which requires a set of skills that I currently do not have. 
+I have now, decided to get those skills and engage in a bootcamp for the next 6 months, to gain the necessary skills to be a full stack web developer. Which is just the first of many in my learning path. 
+ </p>
       <h1>Where I'm From</h1>
       <p>I am from Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +30,7 @@
       <h1>Where do you live?</h1>
       <p>I live in Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals. As well as being a DevOps is currently, in my eye sight</p>
+      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals. As well as being a DevOps, which is currently, in my eye sight</p>
     </section>
 
     <footer id="footer">
