Updating our details

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I have now, decided to get those skills and engage in a bootcamp for the next 6 
       <h1>Where do you live?</h1>
       <p>I live in Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver. I haven't touched it since then, but it has always been one of my goals. As well as being a DevOps, which is currently, in my eye sight</p>
+      <p>I did my frist web pages in the 90's using HTML, and Dreamweaver in the early 2000's. I haven't touched it since then, but it has always been one of my goals. As well as being a DevOps, which is currently, in my eye sight</p>
     </section>
 
     <footer id="footer">
