Updating our details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I’m currently, a senior Systems Engineer, going into DevOps. I have always found all IT related fascinating and I always wanted to, one day, be a “game maker”. 
-The time spent at the Arcades, spending my 20 cents, leftovers from buying milk, only increased the passion that I have and that it has only grown throughout the years. After 15 years in IT, working on Systems, I have the need to move on to the DevOps which requires a set of skills that I currently do not have. 
+The time spent at the Arcades, spending my 20 cents, leftovers from buying milk, only increased the passion that I have and that it has only grown throughout the years. After 15 years in IT, working on Systems, I have the need to move into the DevOps which requires a set of skills that I currently do not have. 
 I have now, decided to get those skills and engage in a bootcamp for the next 6 months, to gain the necessary skills to be a full stack web developer. Which is just the first of many in my learning path. 
  </p>
       <h1>Where I'm From</h1>
